<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!-- Scoreboard Button -->

    <Button
        android:id="@+id/btn_knowaboutus"
        android:layout_width="148dp"
        android:layout_height="69dp"
        android:layout_margin="10dp"
        android:background="#2ecc71"
        android:text="@string/about"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_myprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_myprofile"
        android:layout_width="148dp"
        android:layout_height="69dp"
        android:layout_margin="10dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:background="#3498db"
        android:text="@string/profile"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_knowaboutus"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_transaction"
        app:layout_constraintVertical_bias="0.127"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_transaction"
        android:layout_width="148dp"
        android:layout_height="69dp"
        android:layout_margin="10dp"
        android:layout_marginEnd="52dp"
        android:background="#3498db"
        android:text="@string/transaction"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Score"
        app:layout_constraintEnd_toStartOf="@+id/btn_Score"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_Score"
        android:layout_width="148dp"
        android:layout_height="69dp"
        android:layout_margin="10dp"
        android:background="#2ecc71"
        android:text="@string/scoreboard"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFlipper"
        app:layout_constraintVertical_bias="0.291"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="55sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginBottom="316dp"
            android:autoStart="true"
            android:flipInterval="2000"
            android:inAnimation="@android:anim/slide_in_left"
            android:outAnimation="@android:anim/slide_out_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_disc_campaign"
                app:srcCompat="@drawable/kerala_flood" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_disc_campaign"
                app:srcCompat="@drawable/asam_flood" />
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_disc_campaign"
                app:srcCompat="@drawable/bihar_flood" />
        </ViewFlipper>


</androidx.constraintlayout.widget.ConstraintLayout>
